platforms/ios/build/emulator/metadata-generation-stderr-i386.txt
clang version 4.0.0 (tags/RELEASE_400/final)
Target: i386-apple-darwin17.7.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk" "-iquote" "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain/SAMKeychain.framework/Headers" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator/include" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/internal" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/internal/TKLiveSync/include" "-F/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator" "-F/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain" "-F/Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Base/Frameworks" "-F/Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Maps/Frameworks" "-F/Users/aakash/Documents/Project/Native/platforms/ios/internal/" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-listview/platforms/ios" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-core/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/aakash/Documents/Project/Native/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain"
ignoring nonexistent directory "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain/SAMKeychain.framework/Headers"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/aakash/Documents/Project/Native/platforms/ios/internal
 /Users/aakash/Documents/Project/Native/platforms/ios/internal/TKLiveSync/include
 /Users/aakash/Documents/Project/Native/platforms/ios/build/emulator (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Base/Frameworks (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Maps/Frameworks (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/internal (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-listview/platforms/ios (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-core/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 4.0.0 (tags/RELEASE_400/final)
Target: i386-apple-darwin17.7.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "objc-metadata-generator" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk" "-iquote" "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain/SAMKeychain.framework/Headers" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator/include" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/internal" "-I" "/Users/aakash/Documents/Project/Native/platforms/ios/internal/TKLiveSync/include" "-F/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator" "-F/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain" "-F/Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Base/Frameworks" "-F/Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Maps/Frameworks" "-F/Users/aakash/Documents/Project/Native/platforms/ios/internal/" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-listview/platforms/ios" "-F/Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-core/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/aakash/Documents/Project/Native/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 4.0.0 based upon LLVM 4.0.0 default target x86_64-apple-darwin17.7.0
ignoring nonexistent directory "/Users/aakash/Documents/Project/Native/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain"
ignoring nonexistent directory "/Users/aakash/Library/Developer/Xcode/DerivedData/Native-amtruompwyvwckdbjzeujljrtwhx/Build/Products/Debug-iphonesimulator/SAMKeychain/SAMKeychain.framework/Headers"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/aakash/Documents/Project/Native/platforms/ios/internal
 /Users/aakash/Documents/Project/Native/platforms/ios/internal/TKLiveSync/include
 /Users/aakash/Documents/Project/Native/platforms/ios/build/emulator (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Base/Frameworks (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Maps/Frameworks (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/internal (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-listview/platforms/ios (framework directory)
 /Users/aakash/Documents/Project/Native/platforms/ios/../../node_modules/nativescript-ui-core/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:523:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.4.sdk/usr/include/libxml2/libxml/HTMLparser.h:15:10: fatal error: 'libxml/xmlversion.h' file not found
#include <libxml/xmlversion.h>
         ^~~~~~~~~~~~~~~~~~~~~
/Users/aakash/Documents/Project/Native/platforms/ios/Pods/GoogleMaps/Maps/Frameworks/GoogleMapsCore.framework/Modules/module.modulemap:3:10: error: inferred submodules require a module with an umbrella
  module * { export *}
         ^
2 errors generated.
